[gd_scene load_steps=5 format=3 uid="uid://cvd3vvp17r7qx"]

[ext_resource type="Script" path="res://ConfigMenu/configure_weapons.gd" id="1_gbopp"]
[ext_resource type="PackedScene" uid="uid://o70m5bhp5fbu" path="res://ConfigMenu/configure_weapon_slot.tscn" id="2_auv8g"]
[ext_resource type="Script" path="res://ConfigMenu/WeaponGridContainer.gd" id="2_bs2sq"]

[sub_resource type="Theme" id="Theme_p3i17"]
Button/colors/icon_normal_color = Color(0.231373, 0.160784, 0.184314, 1)

[node name="ConfigureWeapons" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gbopp")

[node name="HSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 2

[node name="VSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="WeaponGridContainer" type="GridContainer" parent="HSplitContainer/VSplitContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 7
script = ExtResource("2_bs2sq")

[node name="MainWeaponSlot" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2

[node name="OffhandWeaponSlot" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2
theme = SubResource("Theme_p3i17")

[node name="OffhandWeaponSlot2" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2
theme = SubResource("Theme_p3i17")

[node name="OffhandWeaponSlot3" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2
theme = SubResource("Theme_p3i17")

[node name="OffhandWeaponSlot4" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2
theme = SubResource("Theme_p3i17")

[node name="OffhandWeaponSlot5" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" instance=ExtResource("2_auv8g")]
layout_mode = 2
theme = SubResource("Theme_p3i17")

[node name="Button" type="Button" parent="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "START"

[node name="MarginContainer2" type="MarginContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ModGridContainer" type="GridContainer" parent="HSplitContainer/VSplitContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 5

[node name="AvailableWeaponsGridContainer" type="GridContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 10

[connection signal="pressed" from="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer/Button" to="HSplitContainer/VSplitContainer/MarginContainer/WeaponGridContainer" method="_on_button_pressed"]
